src/assets/scss/components/project/_imagecard.scss
.project__img {
  width: 100%;

  height: 400px;
  position: relative;
  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.07);
  background: rgba(235, 33, 136, 0.39);

  img {
    max-width: 100%;
  }

  &__one {
    position: absolute;
    top: 70px;
    left: -20px;
    // z-index: 10;
  }
  &__two {
    position: absolute;
    width: 80%;
    margin: 0 auto;
    top: 0px;
    left: 70px;
  }
}

